Shang New Live/src/objects/Fiscal_Period__c.object
<CustomObject>
    <fields>
        <fullName>Allow_Posting__c</fullName>
        <description>Yes - Posting Period is open
No - Posting Period is closed</description>
        <inlineHelpText>Yes - Posting Period is open
No - Posting Period is closed</inlineHelpText>
        <label>Allow Posting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <formula>Fiscal_Year__r.Company__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From related Fiscal Year</inlineHelpText>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiscal Year</label>
        <referenceTo>Fiscal_Year__c</referenceTo>
        <relationshipName>Fiscal_Year_Month</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month_Text__c</fullName>
        <formula>CASE(Month__c, 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;,  4, &quot;April&quot;,  5, &quot;May&quot;,  6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>MONTH(Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>YEAR( Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Fiscal Period</label>
    <nameField>
        <label>Fiscal Period</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fiscal Period</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>